# Optimasol-v2.0-Local

./: .dockerignore  .gitignore  Dockerfile  README.md  client_sample_shell.json  commandes_shell.txt  config.json  docker-compose.yml  logging.config.json  main.py  optimasol  pyproject.toml  run_optimasol.py  script_description.txt
backups/: backup-20260201-204149.db
config/: chack_efficiency_pannels.json  description.txt  détails-configs  min_distance.json  structure globale des YAML.txt  update_weather.json
config/mqtt/: mqtt_receive_config.yaml  mqtt_send_config.yaml
config/weather/: fournisseur_propre.yaml  pannels.yaml  position.yaml  providers.yaml  settings.yaml
core/: all_clients.py  client_model.py
data/: optimasol.db  optimasol.db-shm  optimasol.db-wal
database/: entry.py  optimasol.db
docker/: entrypoint.sh  mosquitto.conf
docs/: DOCKER.md  commandes_shell.md  commandes_shell.txt  script_description.md
drivers/: __init__.py  base_driver.py
drivers/router_smart_electromation/: mqtt_config.json
mqtt_receive/: config_loader.py  details.txt  main_receive.py  writer.py
mqtt_receive/tests/: test_fiche_technique.json
mqtt_sender/: Détails.txt  config_loader.py  sender.py
scripts/: install.sh  install_macos.sh  install_win.sh
scripts/installers/: install.sh  install_macos.sh
scripts/uninstallers/: uninstall.sh  uninstall_macos.sh  uninstall_win.sh
src/: __init__.py
src/optimasol/: __init__.py  cli.py  config_loader.py  default.py  logging_setup.py  main.py  paths.py  service_runner.py  tasks.py
src/optimasol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: db_test.db  test_bis.py  test_db.db  test_main.py
tests/data/: test_optimasol.db
tests/test_db/: test_db.py  (+1 more)
weather/: config_loader.py  config_model.py  détails_weather  main.py  weather_details.txt
web/: app.js  index.html  indexe_bis.html  server.py  style.css
(+38 files in other folders)
