[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimasol"
version = "0.1.0"
description = "Service Optimasol (service 24/24 + CLI administrateur)."
requires-python = ">=3.9"
authors = [{ name = "Optimasol" }]
dependencies = [
  "fastapi",
  "email-validator",
  "numpy",
  "pandas",
  "paho-mqtt",
  "Werkzeug",
  "pydantic<2",
  "optimiser-engine @ git+https://github.com/Optimasol-Team/Optimiser_Engine-v2.0.git",
  "weather-manager-optimasol @ git+https://github.com/Optimasol-Team/Optimasol-Weather.git",
  "uvicorn[standard]",
]

[project.scripts]
optimasol = "optimasol.cli:main"
optimasol-service = "optimasol.service_runner:run"
optimasol-web = "web.server:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["optimasol*"]

[tool.setuptools.package-data]
"optimasol" = [
  "config/*.json",
  "config/*.txt",
  "data/*.db",
  "database/schema.sql",
  "drivers/router_smart_electromation/*.json",
  "drivers/router_smart_electromation/assets/*",
]
